linux (4.5.4-2) UNRELEASED; urgency=medium

  [ Salvatore Bonaccorso ]
  * tipc: check nl sock before parsing nested attributes (CVE-2016-4951)

 -- Salvatore Bonaccorso <carnil@debian.org>  Sat, 21 May 2016 16:47:59 +0200

linux (4.5.4-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.5.4
    - RDMA/iw_cxgb4: Fix bar2 virt addr calculation for T4 chips
    - net/mlx5_core: Fix caching ATOMIC endian mode capability
    - ipvs: handle ip_vs_fill_iph_skb_off failure
    - ipvs: correct initial offset of Call-ID header search in SIP persistence
      engine
    - ipvs: drop first packet to redirect conntrack
    - rtlwifi: Fix size of wireless mode variable
    - [x86] mfd: intel-lpss: Remove clock tree on error path
    - nbd: ratelimit error msgs after socket close
    - null_blk: add lightnvm null_blk device to the nullb_list
    - [arm64] ata: ahci_xgene: dereferencing uninitialized pointer in probe
    - [armhf] wlcore: fix error handling in wlcore_event_fw_logger
    - ath10k: fix pktlog in QCA99X0
    - mwifiex: fix corner case association failure
    - clk-divider: make sure read-only dividers do not write to their register
    - [armhf] clk: rockchip: fix wrong mmc phase shift for rk3228
    - [armhf] clk: rockchip: free memory in error cases when registering clock
      branches
    - [armel/versatile] clk: versatile: sp810: support reentrance
    - [armhf] clk: sunxi: Fix sun8i-a23-apb0-clk divider flags
    - [arm64] clk: xgene: Add missing parenthesis when clearing divider value
    - [armhf] clk: bcm2835: fix check of error code returned by
      devm_ioremap_resource()
    - [armhf] pwm: omap-dmtimer: Fix inaccurate period and duty cycle
      calculations
    - [armhf] pwm: omap-dmtimer: Add sanity checking for load and match values
    - [armhf] pwm: omap-dmtimer: Round load and match values rather than
      truncate
    - lpfc: fix misleading indentation