@@ -3,6 +3,10 @@ linux (4.5.4-2) UNRELEASED; urgency=medium
   [ Salvatore Bonaccorso ]
   * tipc: check nl sock before parsing nested attributes (CVE-2016-4951)
 
+  [ Ben Hutchings ]
+  * aufs: Update support patches to aufs4.5-20160523
+    - mmap: Fix use-after-free in remap_file_pages(2)
+
  -- Salvatore Bonaccorso <carnil@debian.org>  Sat, 21 May 2016 16:47:59 +0200
 
 linux (4.5.4-1) unstable; urgency=medium
